crates/rstest-bdd-harness-gpui/tests/snapshots/scenario_name_in_logs__augmented_message_includes_scenario_name_for_payload_type@&str payload scenario.snap
---
source: crates/rstest-bdd-harness-gpui/tests/scenario_name_in_logs.rs
expression: "&message"
---
rstest-bdd-harness-gpui scenario panicked: feature=tests/features/scenario_name_in_logs.feature:7, scenario="&str payload scenario": a &str panic
