crates/rstest-bdd-harness-gpui/tests/snapshots/scenario_name_in_logs__augmented_message_includes_scenario_name_for_string_payload.snap
---
source: crates/rstest-bdd-harness-gpui/tests/scenario_name_in_logs.rs
expression: "&message"
---
rstest-bdd-harness-gpui scenario panicked: feature=[FEATURE_PATH]:[LINE], scenario="[SCENARIO_NAME]": a string panic
