crates/rstest-bdd-harness-gpui/tests/snapshots/scenario_name_in_logs__failing_scenario_diagnostic_is_written_to_stderr.snap
---
source: crates/rstest-bdd-harness-gpui/tests/scenario_name_in_logs.rs
expression: "&stderr"
---

thread 'failing_scenario_diagnostic_is_written_to_stderr' ([TID]) panicked at crates/rstest-bdd-harness-gpui/tests/scenario_name_in_logs.rs:[LINE]:[COL]:
step panic without scenario context
rstest-bdd-harness-gpui scenario panicked: feature=tests/features/scenario_name_in_logs.feature:7, scenario="Step panics with augmented diagnostic": step panic without scenario context
