crates/rstest-bdd-harness-gpui/tests/snapshots/scenario_name_in_logs__special_characters_in_scenario_name_are_preserved_in_diagnostic.snap
---
source: crates/rstest-bdd-harness-gpui/tests/scenario_name_in_logs.rs
expression: "&message"
---
rstest-bdd-harness-gpui scenario panicked: feature=tests/features/scenario_name_in_logs.feature:7, scenario="Unicode 🐇 & newline\nand tab\t": special-character step panic
